[package]
name = "brioche-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
